--- a/chemicals.html
+++ b/chemicals.html
@@ -4,371 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/la-style.css">
 
     <title>Aveva | Chemicals</title>
   </head>
-  <body class="industry">
-    <div class="nav top-nav">
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link dark" href="index.html">Digital Factory</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link dark active" href="chemicals.html">Chemicals</a>
-        </li>
-        <li class="nav-item level-link level-link-enterprise">
-          <a class="nav-link dark active" href="chemicals.html">Enterprise</a>
-        </li>
-        <li class="nav-item level-link level-link-plant">
-          <a class="nav-link dark active" href="chemicals.html">Plant</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="container container-center">
-      <div class="main-title-wrapper fade">
-        <h2 class="center underline pull-up">Shaping a sustainable future in chemicals</h2>
-        <p class="center large pull-up">
-          AVEVA's expert industrial software is tailored to the needs of chemicals companies, helping you elevate how you can engineer and operate sustainably. Reduce costs, quickly respond to dynamic economic conditions by leveraging cloud, and use flexible subscription options to accelerate time to value. We partner with you throughout your transformation journey, with capabilities you can deploy for quick wins at plant level, and in enterprise-wide programs to drive transformation.
-        </p>
-      </div>
-      <div class="scenes-wrapper chemicals pull-up">
-        <p class="center scenes-label fade">Choose your scene:</p>
-
-        <div class="scenes col-wrapper">
-          <div class="col col-left col-enterprise">
-            <div class="box-wrapper ">
-              <div class="title-wrapper show-on-level">
-                <h2 class="underline left">Accelerate digital transformation across your chemical enterprise</h2>
-                <p class="large">
-                  Chemical companies must optimize capital projects to drive innovation and sustainability, unlocking the value of plant and process data to drive performance intelligence, and empowering your workforce with data-led insights that ensure business continuity.
-                </p>
-              </div>
-              <div class="video-wrapper">
-                <video loop muted autoplay playsinline class="video">
-                  <source src="assets/videos/AVEVA_chemical_enterprise.webm" type="video/webm">
-                </video>
-                <div class="video-overlay show-on-level">
-                  <div class="pulse-dot sustainability" data-sidebar="sustainability">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Drive Sustainability</div>
-                  </div>
-                  <div class="pulse-dot performance" data-sidebar="performance">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Improve Performance</div>
-                  </div>
-                  <div class="pulse-dot competency" data-sidebar="competency">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Build Competency</div>
-                  </div>
-                </div>
-              </div>
-              <a href="#" class="button level-button level-button-enterprise">Enterprise Level</a>
-            </div>
-          </div>
-          <div class="col col-right col-plant">
-            <div class="box-wrapper">
-              <div class="title-wrapper show-on-level">
-                <h2 class="underline left">Accelerate digital transformation in your chemical plant</h2>
-                <p class="large">
-                  Chemical plants must optimize processes, drive supply chain agility, increase resilience, and maximize asset uptime to ensure safe, profitable, and reliable operations.
-                </p>
-              </div>
-              <div class="video-wrapper">
-                <video loop muted autoplay playsinline class="video">
-                  <source src="assets/videos/AVEVA_chemical_plant_1.webm" type="video/webm">
-                </video>
-                <div class="video-overlay show-on-level">
-                  <div class="pulse-dot margins" data-sidebar="margins">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Improve margins</div>
-                  </div>
-                  <div class="pulse-dot downtime"  data-sidebar="downtime">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Eliminate downtime</div>
-                  </div>
-                  <div class="pulse-dot agility" data-sidebar="agility">
-                    <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                    <div class="tooltip">Increase agility</div>
-                  </div>
-                </div>
-              </div>
-              <a href="#" class="button level-button level-button-plant">Plant Level</a>
-            </div>
-          </div>
-        </div>
-        <div class="legend show-on-level">
-          <div class="dot">
-            <img src="assets/images/dot-purple.svg" alt="">
-          </div>
-          <p class="description">
-            Hover and click on each dot
-            to explore further insights
-            and content.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="sidebar-wrapper">
-      <div class="sidebar sidebar-sustainability">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Deliver cost-effective capital projects to build the sustainable chemical plant of the future
-          </h4>
-          <p class="white">
-            With the pressure to drive circularity and reach ESG targets in the chemical industry,
-            new sustainable processes and products must be developed through faster and efficient capital projects.
-          </p>
-          <p class="white">
-            AVEVA helps you digitally transform your engineering to control capital project execution
-            delivering on time and budget. Your teams can innovate and develop sustainable processes
-            through efficient and flexible workflows and better collaboration in the cloud.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-enterprise-sustainability-top.svg" alt="">
-              </div>
-              <p class="slate">Learn how to drive a sustainable chemical industry through process simulation</p>
-            </div>
-            <a href="#" class="button">Learn How</a>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-enterprise-sustainability-bottom.svg" alt="">
-              </div>
-              <p class="slate">Read about Eastman´s digital transformation program within its engineering and construction organization</p>
-            </div>
-            <a href="#" class="button button-inverted">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar sidebar-performance">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Unlock the hidden value out of plant and process data
-          </h4>
-          <p class="white">
-            When it comes to business agility and optimizing your operations,
-            information silos can be one of the main factors to compromise profitability.
-            A perfectly crafted plan is often obsolete when it meets the reality of
-            execution as disruptions unfold in real-time.
-          </p>
-          <p class="white">
-            AVEVA provides everything from edge to cloud computing and analytics to Enterprise visualization,
-            providing easy access to critical data across the value chain. With real-time data, you can predict
-            operational behavior and unlock the hidden values for higher performance.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="sidebar-video-wrapper">
-              <!--            TODO-->
-              <p class="slate">
-                Teaser video from LNS (waiting for mp4)
-              </p>
-            </div>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-enterprise-performance.svg" alt="">
-              </div>
-              <p class="slate">
-                Learn how chemical companies can drive profitability using integrated, visualized plant and process data.
-              </p>
-            </div>
-            <a href="#" class="button">Read More</a>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar sidebar-competency">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Build competency to ensure safe and sustainable operations
-          </h4>
-          <p class="white">
-            Human error is expensive. To reduce your knowledge gap and ensure safe operations,
-            organizations need to build expertise and drive intelligent, insightful performance.
-          </p>
-          <p class="white">
-            AVEVA combines the latest technologies with sound instructional design and behavioral
-            best practices. By offering your team the best competency-based experiential learning,
-            you ensure your operators perform safely and retain operational agility to drive
-            performance intelligence.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="sidebar-video-wrapper">
-              <!--            TODO-->
-              <p class="slate">
-                AVEVA XR Training_short.mp4
-              </p>
-            </div>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-enterprise-competency.svg" alt="">
-              </div>
-              <p class="slate">
-                Learn how BASF uses immersive, virtual reality technology to train a generation of operators.
-              </p>
-            </div>
-            <a href="#" class="button button-inverted">Watch Now</a>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar sidebar-agility">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Agility and resilience require the ability to adapt quickly to market demands while securing profitable operations.
-          </h4>
-          <p class="white">
-            Chemical companies need agility to respond to market demands and transform their offerings as need
-            evolves. This means you need flexibility to optimize your supply chain to minimize losses, speed up
-            innovation, and meet your circularity and C46 sustainability commitments.
-
-          </p>
-          <p class="white">
-            AVEVA provides the expert chemical manufacturing platform that connects your people and systems to
-            drive operational efficiency and insights, and boost interoperability. Maximize plant throughput
-            with recipe flexibility, optimized production schedules, and compliant execution.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-plant-agility-top.svg" alt="">
-              </div>
-              <p class="slate">
-                Learn how global trends are helping to build a sustainable supply chain for leading chemicals companies.
-              </p>
-            </div>
-            <a href="#" class="button">Read More</a>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-plant-agility-bottom.svg" alt="">
-              </div>
-              <p class="slate">
-                See how optimizing your value chain can drive a circular economy.
-              </p>
-            </div>
-            <a href="#" class="button button-inverted">Watch Now</a>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar sidebar-downtime">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Optimize your maintenance strategy to avoid costly unplanned downtime and risks
-          </h4>
-          <p class="white">
-            Today complex operations make it even more challenging to optimize a maintenance strategy.
-            Reactive procedures are incapable of preventing costly failures and keeping a safe working
-            environment.
-          </p>
-          <p class="white">
-            AVEVA´s end-to-end solution manages data collection from various sources and
-            incorporates advanced analytics with Machine Learning, Artificial Intelligence
-            and cloud computing, improving workforce efficiency and reducing downtime and
-            maintenance costs.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="sidebar-video-wrapper">
-              <!--            TODO-->
-              <p class="slate">
-                Covestro - Pushing to a data-driven future
-              </p>
-            </div>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-plant-downtime.svg" alt="">
-              </div>
-              <p class="slate">
-                Watch the webinar to learn about AI-driven analytics in Chemicals
-              </p>
-            </div>
-            <a href="#" class="button button-inverted">Watch Now</a>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar sidebar-margins">
-        <div class="purple-gradient-section">
-          <div class="sidebar-close">
-            <img src="assets/images/close.svg" alt="">
-          </div>
-          <h4>
-            Optimize your operations for regulatory compliance and competitive performance
-          </h4>
-          <p class="white">
-            With a competitive market environment and tighter regulations, you need to optimize your
-            operations to quickly respond to market demands and remain profitable while controlling
-            waste and emissions, ensuring your company reaches sustainability targets.
-          </p>
-          <p class="white">
-            AVEVA can help you improve process profitability and quality, reaching benefits such as
-            throughput increase of 5%, process yields improvements of 10%, reduce the specific energy
-            consumption of 10% while lowering emissions and costs related to waste reworking and recycling.
-          </p>
-        </div>
-        <div class="white-section">
-          <div class="top">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-plant-margins-top.svg" alt="">
-              </div>
-              <p class="slate">
-                Learn how AVEVA is helping leading chemicals companies operate with agility during COVID-19.
-              </p>
-            </div>
-            <a href="#" class="button">Learn How</a>
-          </div>
-          <div class="bottom">
-            <div class="icon-wrapper">
-              <div class="icon">
-                <img src="assets/images/chemicals-plant-margins-bottom.svg" alt="">
-              </div>
-              <p class="slate">
-                See how BASF is able to continually optimze the intelligent performance of its ethylene plants.
-              </p>
-            </div>
-            <a href="#" class="button button-inverted">Read More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="assets/js/scenes.js"></script>
-    <script src="assets/js/match-height.js"></script>
-    <script src="assets/js/sidebar.js"></script>
+  <body>
+    <iframe src="./new-chemicals.html" width="100%" height="100vh" style="height: 100vh" frameborder="0"></iframe>
   </body>
 </html>
