--- a/chemicals.html
+++ b/chemicals.html
@@ -4,10 +4,132 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" type="text/css" href="assets/css/new-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/la-style.css">
 
     <title>Aveva | Chemicals</title>
   </head>
-  <body>
-    <iframe src="./new-chemicals.html" width="100%" height="100vh" style="height: 100vh" frameborder="0"></iframe>
+  <body class="industry">
+    <div class="nav top-nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a class="nav-link dark" href="index.html">Digital Factory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link dark active" href="chemicals.html">Chemicals</a>
+        </li>
+        <li class="nav-item level-link level-link-enterprise">
+          <a class="nav-link dark active" href="chemicals.html">Enterprise</a>
+        </li>
+        <li class="nav-item level-link level-link-plant">
+          <a class="nav-link dark active" href="chemicals.html">Plant</a>
+        </li>
+      </ul>
+    </div>
+
+
+    <div class="container container-center">
+      <div class="main-title-wrapper fade">
+        <div>
+          <h2 class="center underline pull-up">Shaping a sustainable future in chemicals</h2>
+          <p class="center large pull-up">
+            AVEVA's expert industrial software is tailored to the needs of chemicals companies, helping you elevate how you can engineer and operate sustainably. Reduce costs, quickly respond to dynamic economic conditions by leveraging cloud, and use flexible subscription options to accelerate time to value. We partner with you throughout your transformation journey, with capabilities you can deploy for quick wins at plant level, and in enterprise-wide programs to drive transformation.
+          </p>
+        </div>
+      </div>
+      <div class="scenes-wrapper chemicals pull-up">
+        <p class="center scenes-label fade">Choose your scene:</p>
+
+        <div class="scenes col-wrapper">
+          <div class="col col-left col-enterprise">
+            <div class="box-wrapper">
+              <div class="title-wrapper show-on-level">
+                <div>
+                  <h2 class="underline left">Accelerate digital transformation across your chemical enterprise</h2>
+                  <p class="large">
+                    Chemical companies must optimize capital projects to drive innovation and sustainability, unlocking the value of plant and process data to drive performance intelligence, and empowering your workforce with data-led insights that ensure business continuity.
+                  </p>
+                </div>
+              </div>
+              <div class="hide-on-level">
+                <div class="video-wrapper">
+                  <video loop muted autoplay playsinline class="video">
+                    <source src="assets/videos/AVEVA_chemical_enterprise.webm" type="video/webm">
+                  </video>
+                  <div class="video-overlay show-on-level">
+                    <div class="pulse-dot sustainability" data-sidebar="sustainability">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Drive Sustainability</div>
+                    </div>
+                    <div class="pulse-dot performance" data-sidebar="performance">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Improve Performance</div>
+                    </div>
+                    <div class="pulse-dot competency" data-sidebar="competency">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Build Competency</div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="button level-button level-button-enterprise">Enterprise Level</a>
+              </div>
+            </div>
+          </div>
+          <div class="col col-right col-plant">
+            <div class="box-wrapper">
+              <div class="title-wrapper show-on-level">
+                <div>
+                  <h2 class="underline left">Accelerate digital transformation in your chemical plant</h2>
+                  <p class="large">
+                    Chemical plants must optimize processes, drive supply chain agility, increase resilience, and maximize asset uptime to ensure safe, profitable, and reliable operations.
+                  </p>
+                </div>
+              </div>
+              <div class="hide-on-level">
+                <div class="video-wrapper">
+                  <video loop muted autoplay playsinline class="video">
+                    <source src="assets/videos/AVEVA_chemical_plant_1.webm" type="video/webm">
+                  </video>
+                  <div class="video-overlay show-on-level">
+                    <div class="pulse-dot margins" data-sidebar="margins">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Improve margins</div>
+                    </div>
+                    <div class="pulse-dot downtime"  data-sidebar="downtime">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Eliminate downtime</div>
+                    </div>
+                    <div class="pulse-dot agility" data-sidebar="agility">
+                      <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
+                      <div class="tooltip">Increase agility</div>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="button level-button level-button-plant">Plant Level</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="legend show-on-level">
+          <div class="dot">
+            <img src="assets/images/dot-purple.svg" alt="">
+          </div>
+          <p class="description">
+            Hover and click on each dot
+            to explore further insights
+            and content.
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+    
+  
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="assets/js/new-scenes.js"></script>
+    <script src="assets/js/match-height.js"></script>
+    <script src="assets/js/sidebar.js"></script>
   </body>
 </html>
