more than half of the text updates

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <title>Aveva | Welcome</title>
   </head>
   <body class="home splash purple">
-   
+
     <div class="splash-inner container container-center">
       <div class="row container-position col-wrapper">
         <div class="col col-left">
           <div class="text-wrapper">
-            <h1>Welcome to the Digital Factory Experience</h1>
+            <h1>Shaping a Sustainable Future for Industries</h1>
           </div>
         </div>
         <div class="col col-right dark purple-invisible">
           <p class="large">
-            Discover how AVEVA helps elevate your performance by extending
-            your existing systems with cloud technology and artificial intelligence.
+            Learn how digital acceleration empowers you to optimize engineering and operations to unlock performance intelligence with our digital factory experience. Discover how partnering with AVEVA empowers industries with a comprehensive AI-infused digital thread to enable the connected worker with insights, guidance, and learning to shape a sustainable future.
           </p>
           <p class="large">
             <strong>
@@ -38,7 +37,7 @@
               <a class="nav-link dark" href="#" data-slide="consumer-products">Consumer-packaged Goods</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dark" href="#" data-slide="energy">Energy</a>
+              <a class="nav-link dark" href="#" data-slide="energy">Oil and Gas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="power">Power</a>
@@ -85,7 +84,7 @@
               <a class="nav-link dark" href="#" data-slide="consumer-products">Consumer-packaged Goods</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dark" href="#" data-slide="energy">Energy</a>
+              <a class="nav-link dark" href="#" data-slide="energy">Oil and Gas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="power">Power</a>
@@ -123,7 +122,7 @@
               <a class="nav-link dark active" href="#" data-slide="consumer-products">Consumer-packaged Goods</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dark" href="#" data-slide="energy">Energy</a>
+              <a class="nav-link dark" href="#" data-slide="energy">Oil and Gas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="power">Power</a>
@@ -141,7 +140,7 @@
       <div class="container container-center container-position slide slide-energy col-wrapper" style="display: none" data-slide="energy">
         <div class="col col-left">
           <div class="text-wrapper">
-            <h1>Energy</h1>
+            <h1>Oil and Gas</h1>
           </div>
         </div>
         <div class="col col-right">
@@ -161,7 +160,7 @@
               <a class="nav-link dark" href="#" data-slide="consumer-products">Consumer-packaged Goods</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dark active" href="#" data-slide="energy">Energy</a>
+              <a class="nav-link dark active" href="#" data-slide="energy">Oil and Gas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="power">Power</a>
@@ -199,7 +198,7 @@
               <a class="nav-link dark" href="#" data-slide="consumer-products">Consumer-packaged Goods</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dark" href="#" data-slide="energy">Energy</a>
+              <a class="nav-link dark" href="#" data-slide="energy">Oil and Gas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dark active" href="#" data-slide="power">Power</a>
