added video popup code

--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
             <!--<video class="video" poster="assets/images/video-thumb.png">
               <source src="" type="video/webm">
             </video>-->
-            <script src="https://fast.wistia.com/embed/medias/597hd5njdz.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_597hd5njdz videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/597hd5njdz/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+
+            <div class="fitb-popup-contain">
+              <div class="pop-trigger">
+                <img src="assets/images/video-preview.jpg" />
+                <div class="fitb-pop">
+                  <script src="https://fast.wistia.com/embed/medias/597hd5njdz.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_597hd5njdz videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/597hd5njdz/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                </div>
+              </div>
+            </div>
             <!--<img src="assets/images/play.svg" alt="" class="play-button">-->
           </div>
         </div>
@@ -216,6 +224,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/slider.js"></script>
+    <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/home.js"></script>
   </body>
 </html>
