--- a/chemicals.html
+++ b/chemicals.html
@@ -243,11 +243,16 @@
         <div class="white-section">
           <div class="top">
             <div class="sidebar-video-wrapper">
-              <!--            TODO-->
 
-              <p class="slate">
-                AVEVA XR Training_short.mp4
-              </p>
+
+              <div class="fitb-popup-contain">
+                <div class="pop-trigger">
+                  <img src="assets/images/video-preview.jpg" />
+                  <div class="fitb-pop">
+                    <script src="https://fast.wistia.com/embed/medias/h5vrysnblc.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_h5vrysnblc videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/h5vrysnblc/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -336,8 +341,15 @@
         <div class="white-section">
           <div class="top">
             <div class="sidebar-video-wrapper">
-              <!--            TODO-->
 
+              <div class="fitb-popup-contain" style="margin-bottom:30px;">
+                <div class="pop-trigger">
+                  <img src="assets/images/video-preview.jpg" />
+                  <div class="fitb-pop">
+                    <script src="https://fast.wistia.com/embed/medias/q85frbsnvl.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_q85frbsnvl videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/q85frbsnvl/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                  </div>
+                </div>
+              </div>
               <p class="slate">
                 See how Covestro uses AVEVA Process Simulation in conjunction with PI System to drive data-led insights.
               </p>
@@ -414,6 +426,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/new-scenes.js"></script>
     <script src="assets/js/match-height.js"></script>
+    <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/sidebar.js"></script>
   </body>
 </html>
