--- a/chemicals.html
+++ b/chemicals.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="assets/fonts/Barlow-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Regular.ttf" as="font" type="font/ttf" crossorigin>
 
+    <link rel="preload" href="assets/fonts/Barlow-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Bold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Bold.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Barlow-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-SemiBold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-SemiBold.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Barlow-Light.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Light.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-Light.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Barlow-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-ExtraBold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Barlow-ExtraBold.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Muli-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-SemiBold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-SemiBold.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Muli-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-Regular.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-Regular.ttf" as="font" type="font/ttf" crossorigin>
+
+    <link rel="preload" href="assets/fonts/Muli-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-ExtraBold.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="assets/fonts/Muli-ExtraBold.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" type="text/css" href="assets/css/new-style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/la-style.css">
 
