--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="col col-right dark">
           <p class="large slate">
-            AVEVA provides expert software to the top 15 leading chemical companies, enabling them to unify data, drive engineering excellence and operational agililty, and support circularity and sustainable performance.
+            AVEVA provides expert software to the top 15 leading chemical companies, enabling them to unify data, drive engineering excellence and operational agility, and support circularity and sustainable performance.
           </p>
           <a href="chemicals.html" class="button">Get Started</a>
         </div>
